--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
         <div class="box">
            <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box1.jpg');"></div>
+                <div class="box-img" style="background-image: url('box1.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box2.jpg');"></div>
+                <div class="box-img" style="background-image: url('box2.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box3.jpg');"></div>
+                <div class="box-img" style="background-image: url('box3.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box4.jpg');"></div>
+                <div class="box-img" style="background-image: url('box4.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
@@ -135,28 +135,28 @@
         <div class="box">
            <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box8.jpg');"></div>
+                <div class="box-img" style="background-image: url('box8.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box5.jpg');"></div>
+                <div class="box-img" style="background-image: url('box5.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/box6.jpg');"></div>
+                <div class="box-img" style="background-image: url('box6.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./assets/download.jpg');"></div>
+                <div class="box-img" style="background-image: url('download.jpg');"></div>
                 <p>See More</p>
            </div>
         </div>
